# roboarm

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: api.md  wiring.md
firmware/: platformio.ini
firmware/src/: command_parser.cpp  command_parser.h  config.h  main.cpp  motor_controller.cpp  motor_controller.h  web_server.cpp  web_server.h
host/: README.md  pyproject.toml
host/src/roboarm/: __init__.py  cli.py  client.py
